Fix notification overlap issues
Fixes an bug where the "Add action" button was displayed on top of the notification

--- a/admin_site/static/css/admin-styles.css
+++ b/admin_site/static/css/admin-styles.css
@@ -56,3 +56,8 @@
     max-width: 100%;
     max-height: 100%;
 }
+
+/* Wagtail notifications */
+.messages {
+    z-index: 1;
+}
